Improvement which should hopefully help with bug #693607 - MupdfActivity crash when rotating the device.

When cancelling a render async task, we now wait for it to actually finish
before continuing. The benefit of this is that we should be able to guarantee
that its Bitmap becomes eligible for GC before we continue to create any
new bitmaps.

This should hopefully help with the OOM errors seen when rotating
the device and trying to create the new bitmaps.

To prevent the UI thread from being blocked for too long while we're waiting
for the async task to finish, we use a fz_cookie and set the 'abort' flag to
request the render be stopped as soon as possible.