platform/android/src/com/artifex/mupdfdemo/CancellableTaskDefinition.java
@@ -1,0 +1,8 @@
+package com.artifex.mupdfdemo;
+
+public interface CancellableTaskDefinition <Params, Result>
+{
+	public Result doInBackground(Params ... params);
+	public void doCancel();
+	public void doCleanup();
+}
